# NewCppRL

./: .gitignore  AGENTS.md  CLAUDE.md  architecture_optimization.md  diagnose_v5_model.py  environment.yaml  functionality_comparison.md  package-lock.json  push_to_github.sh  pyproject.toml  setup.py
.serena/: project.yml
configs/: dqn_train_config.yaml  env_config.yaml  env_config_area_coverage.yaml  env_config_area_coverage_v5.yaml  env_config_copy.yaml  example_multi_gpu_config.yaml  ppo_train_config.yaml  train_area_coverage_sac_cont_config.yaml  train_area_coverage_v5_sac_cont_config.yaml  train_dqn_config.yaml  train_ppo_config.yaml  train_qlambda_config.yaml  train_sac_config.yaml  train_sac_cont_config.yaml
develop_plan/: dynamic_plan.md
envs/: README_v4_v5.md  __init__.py  cpp_env_base.py  cpp_env_base_copy.py  cpp_env_real.py  cpp_env_v1.py  cpp_env_v2.py  cpp_env_v3.py  cpp_env_v4.py  environment_technical_documentation.md  hifs.md  utils.py
envs_new/: ARCHITECTURE_ULTRATHINK_ANALYSIS.md  DOCUMENTATION_SUMMARY.md  TECHNICAL_DOCUMENTATION.md  TROUBLESHOOTING_ENHANCED.md  __init__.py  cpp_env_base.py  cpp_env_v1.py  cpp_env_v2.py  cpp_env_v3.py  cpp_env_v4.py  cpp_env_v5.py  cpp_env_v6.py  environment_factory.py
eval/: dqn_eval.py  get_model.py  t[01000]_r[1433].pt  t[01000]_sd.pt
mcp/: context7_servers.json
model/: impala_net.py  sgcnn.py  single_head.py
rl/: dqn_eval.py  dqn_loss.py  dqn_train.py
rl_new/: ARCHITECTURE_ANALYSIS.md  MIGRATION_VERIFICATION_REPORT.md  README.md  quick_start.py  torchrl_config.py
rules/: config.py  dqn_test.py  env_make.py  jump_path.py  sac_cont_test.py  script.py
rules_new/: MIGRATION_GUIDE.md  README.md  __init__.py  config.py  eval_runner.py  helpers.py  jump_path.py  main.py  metrics.py  metrics_io.py  plotter.py  policies_learning.py  policies_rules.py  ral2022_coverage.txt  run_tests.py  sac_cont_test.py  scenarios.py  script.py  test_simplified_architecture.py  tester.py
rules_new2/: __init__.py  coverage_planners_v2.py  eval_runner.py  eval_watch_learning.py  metrics_io.py  policies_learning.py  visualize_eval_scenes.py
scripts/: dev_envcreator_init_probe.py  dev_eval_video_like_evalfunc.py  dev_eval_video_manual.py  dev_eval_video_smoke.py  dev_hif_pred_render_smoke.py  smoke_dual_models.py  smoke_hif_online.py
src/: cpu_apf.cpp  cpu_fov.cpp
test/: bfs.py  env_time_cost.py  test_apf.py  (+1 more)
(+1216 files in other folders)
