[build-system]
requires = ["setuptools", "pybind11"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["envs*", "rl*"]

[project]
name = "cpp_rl"
version = "0.1.0"
authors = [
    { name = "0Pinky0", email = "lpinkyl@126.com" },
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "gymnasium == 0.29.1",
    "pygame == 2.6.0",
    "opencv-python == 4.10.0.84",
    "torchrl == 0.5.0",
    "torchvision == 0.19.0",
    "tqdm == 4.66.4",
    "tensorboard == 2.17.0",
    "omegaconf == 2.3.0",
    "moviepy == 1.0.3",
    "matplotlib == 3.8.4",
    "shapely == 2.0.5",
    "dubins @ git+https://github.com/rdesc/pydubins.git",
]
