[build-system]
requires = ["setuptools", "pybind11"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["envs*", "rl*"]

[project]
name = "cpp_rl"
version = "0.1.0"
authors = [
    { name = "0Pinky0", email = "lpinkyl@126.com" },
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "dubins @ git+https://github.com/rdesc/pydubins.git",
    "gymnasium == 1.2.0",
    "matplotlib == 3.10.5",
    "moviepy == 2.2.1",
    "numpy == 2.1.3",
    "omegaconf == 2.3.0",
    "opencv-python == 4.12.0.88",
    "pygame == 2.6.1",
    "shapely == 2.1.1",
    "tensorboard >= 2.17.0",
#    "torchrl == 0.9.2",
#    "torchvision >= 0.19.0",
    "tqdm == 4.66.5",
    "wandb == 0.21.1",
#    "tensordict >= 0.5.0",
    "pandas",
    "scipy",
    "cupy-cuda12x"
]
